--- a/views/partials/hourtypes.html
+++ b/views/partials/hourtypes.html
@@ -37,6 +37,10 @@
           <label>Color</label>
           <input type="color" id="hour-type-color" value="#6b7280" />
           <div class="ts-note">Used for calendar visualization.</div>
+          <div class="ts-colorblind-warning" id="hour-type-color-warning" style="display:none;">
+            <span class="ts-colorblind-warning-icon">!</span>
+            <span>This color may be difficult to distinguish for colorblind users</span>
+          </div>
         </div>
       </div>
       <div class="ts-flag-row" style="margin-top:16px;">
