--- a/views/partials/settings.html
+++ b/views/partials/settings.html
@@ -46,6 +46,10 @@
             <option value="WA">Western Australia</option>
           </select>
         </div>
+        <div id="minimum-end-time-col" style="display:none;">
+          <label>Minimum End Time</label>
+          <input type="time" id="set-minimum-end-time" />
+        </div>
       </div>
       <div style="margin-top:8px; text-align:right; display:flex; justify-content:flex-end; gap:8px;">
         <button class="ghost" id="btn-discard-settings" style="display:none;">Discard Changes</button>
